
Changelog
=========

2018.4.0 (unreleased)
---------------------

- Lock oder of avaialbe roles in sharing endpoint. [phgross]
- Fix archival_file and public_trial checks on documents overview. [phgross]
- Add placeful workflow policy for inbox-area. Let inbox users edit and checkout documents but not the inbox itself. [phgross]
- Fix base URL for contentish objects. [njohner]
- Bump Chameleon to 3.3 in order to fix edge case in exception handler causing recursion. [lgraf]
- Fix styling of plone wizard. [Kevin Bieri]
- Fix styling of multiline tree portlet tab headers. [Kevin Bieri]
- Move excerpts to the file info box on proposal overviews. [Rotonen]
- Bump plone.restapi to 3.4.1 version. [phgross]
- Only prefill dossier_manager as a form level default (instead of schema level). [lgraf]
- Make sure dossier manager field is set when protecting a dossier. [njohner]
- Fix officeconnector issue when invoked from url with trailing view name. [njohner]
- Sort excerpts by title. [Rotonen]
- Task forms: Drop unnecessary distinction between single/multi org unit setups. [lgraf]
- Add the document UUID to the OC document payloads. [Rotonen]
- Add eTag adapter for the clipboard. [phgross]
- Fix styling of dossier manager field, when a group is selected.[phgross]
- Update fontawesome to version 5.2. [Kevin Bieri]
- Add missing icon in Activity settings. [njohner]
- Resolve interactive users already on the select-responsibles step. [phgross]
- Revoke local roles for responsible and agency when finishing a task. [phgross]
- Allow administrators to export the repository as excel file. [njohner]
- Document generated meeting documents. [tarnap]
- Hide create proposal action on inboxes document listing tab. [phgross]
- Add RoleAssignment manager layer including a new sharing form. [phgross]
- Fix teamraum styles import / export for right logo. [tarnap]
- Bump ftw.upgrade for deferrable upgrade support. [deiferni]